--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ repositories {
 
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
-    testCompile 'junit:junit:4.11'
+    compile 'junit:junit:4.11'
     compile "org.spockframework:spock-core:1.0-groovy-2.3"
     compile 'log4j:log4j:1.2.17'
 }
